Thu Mar 14 00:29:12 2002  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* re.c (rb_reg_match): should clear $~ if operand is nil.

	* re.c (rb_reg_match2): ditto.

Wed Mar 13 18:50:29 2002  Akinori MUSHA  <knu@iDaemons.org>

	* lib/getopts.rb: Merge from 1.7.  Rewrite to fix some bugs and
	  complete features.
	    - Accept options with the colon in the first argument;
	      getopts("a:bcd:") is equivalent to getopts("bc", "a:", "d:").
	    - Do not discard the argument that caused an error.
	    - Do not discard '-', which commonly stands for stdin or stdout.
	    - Allow specifying a long option with a value using '='.
	      (command --long-option=value)
	    - Stop reading options when it meets a non-option argument.

Mon Mar 11 18:03:37 2002  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* regex.c (re_compile_pattern): '\0111' should be '\011' plus '1',
	  since octal literals are formed by three digits at most.

Mon Mar 11 14:44:38 2002  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* eval.c (rb_eval_cmd): cbase should not be NULL; it should be
	  either ruby_wrapper or Object.

Sun Mar 10 02:18:22 2002  Koji Arai  <jca02266@nifty.ne.jp>

	* enum.c (enum_each_with_index): should return self.

	* process.c (proc_setpgrp): should return value for non-void function.

	* process.c (proc_getpgid): should raise exception if getpgid() return -1.

	* string.c (rb_str_ljust): should return a duplicated string.

	* string.c (rb_str_rjust): ditto.

	* string.c (rb_str_center): ditto.

Fri Mar  8 02:21:32 2002  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* eval.c (cvar_cbase): utility function to find innermost non
	  singleton cbase.

	* eval.c (is_defined): adopt new cvar behavior.

	* eval.c (rb_eval): ditto.

	* eval.c (assign): ditto.

Thu Mar  7 20:08:25 2002  Nobuyoshi Nakada  <nobu.nakada@nifty.ne.jp>

	* gc.c (rb_source_filename): added. holds unique strings for file
	  names with GC space.

	* gc.c (rb_gc_mark): mark source file name.

	* gc.c (gc_sweep): ditto.
